[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://scripts/target.gd" type="Script" id=2]
[ext_resource path="res://assets/block.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 26.6797

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[node name="target" type="Node2D" groups=[
"mortal",
"targetable",
]]
script = ExtResource( 2 )

[node name="body" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="body"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
shape = SubResource( 1 )

[node name="health" type="Sprite" parent="body"]
self_modulate = Color( 0.443137, 0.113725, 0.113725, 1 )
position = Vector2( 0, -40 )
scale = Vector2( 1.7, 0.3 )
texture = ExtResource( 3 )

[node name="bar" type="Sprite" parent="body/health"]
self_modulate = Color( 0.847059, 0.25098, 0.25098, 1 )
position = Vector2( -16.2786, -0.601349 )
texture = ExtResource( 3 )
offset = Vector2( 16.2786, 0.601349 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="body"]
shape = SubResource( 2 )
shape_centered = false

[node name="healthTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="pressed" from="body/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="timeout" from="healthTimer" to="." method="_on_healthTimer_timeout"]
